@@ -1,3 +1,11 @@
+2007-05-23  Sascha L. Teichmann <sascha.teichmann@intevation.de>
+
+	Generate text only legend labels for Layerables that are not Layers.
+
+	* src/de/intevation/printlayout/Legend2SVG.java:
+		Generate simple labels for Layerables that are not Layers.
+		TODO: add adequate symbols.
+		
 2007-05-22  Sascha L. Teichmann <sascha.teichmann@intevation.de>
 
 	Enable Print/Layout menu item when there are Layerables.
